Stuck on merge sort bug

--- a/src/styles/main_body.scss
+++ b/src/styles/main_body.scss
@@ -3,5 +3,5 @@
     position: relative;
     padding: 60px;
     height: 100%;
-    justify-content: space-between;
+    justify-content: center;
 }
